// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web 1. does not render an image if display is not received 1`] = `Array []`;

exports[`web 2. does not render an image if ratio is not received 1`] = `Array []`;

exports[`web 3. image with no caption 1`] = `
<div>
  <TimesImage
    aspectRatio={1.7777777777777777}
    uri="https://imageserver/someImage"
  />
</div>
`;

exports[`web 4. image with caption 1`] = `
<div>
  <div>
    <div>
      <div>
        Some caption
      </div>
    </div>
  </div>
</div>
`;

exports[`web 5. image with credit 1`] = `
<div>
  <div>
    <div>
      <div>
        SOME CREDIT
      </div>
    </div>
  </div>
</div>
`;
